deployments/local/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cica-case-review-documents-deployment
  labels:
    app: cica-case-review-documents
spec:
  replicas: 1
  selector:
    matchLabels:
      app: cica-case-review-documents
  template:
    metadata:
      labels:
        app: cica-case-review-documents
    spec:
      containers:
        - name: cica-case-review-documents
          image: cica-review-case-documents:latest
          imagePullPolicy: Never
          ports:
            - containerPort: 5000
          securityContext:
            allowPrivilegeEscalation: false
            capabilities:
              drop:
                - ALL
            runAsNonRoot: true
            seccompProfile:
              type: RuntimeDefault
        - name: debug
          image: nicolaka/netshoot
          command: ["sleep", "infinity"]
