deployments/local/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: cica-case-review-documents-ingress
spec:
  rules:
    - host: localhost
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: cica-case-review-documents-service
                port:
                  number: 80
